--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -5,4 +5,12 @@
 }
 
 <h2>@Model.Name</h2>
+<hr />
+<br />
+<ul>
+    <li><strong>Genre:</strong> @Model.Genre.Name</li>
+    <li><strong>Release Date:</strong> @Model.ReleaseDate.ToLongDateString()</li>
+    <li><strong>Date Added:</strong> @Model.DateAdded.ToLongDateString()</li>
+    <li><strong>Stock:</strong> @Model.Stock</li>
+</ul>
 
