--- a/Vidly/Views/Shared/_Navbar.cshtml
+++ b/Vidly/Views/Shared/_Navbar.cshtml
@@ -10,6 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("New Rentals", "New", "Rentals")</li>
                 <li>@Html.ActionLink("Customers", "Customers", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "Movies", "Movies")</li>
             </ul>
